# LIM_Text_Editor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
apps/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  text.cpp  textview.cpp  view.cpp
src/headerfiles/: headers.hpp  main.hpp
src/headers/: headers.hpp  main.hpp  text.hpp  textview.hpp  view.hpp
tests/: CMakeLists.txt
